# hoi-benchmarks

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  batch_api_utils.py  calculate_bertscore.py  checkpoint_manager.py  eval_api_utils.py  eval_hico_action_referring_batch.py  eval_hico_action_referring_claude.py  eval_hico_action_referring_gemini.py  eval_hico_action_referring_openai.py  eval_hico_action_referring_qwen3vl.py  eval_hico_action_referring_sft_noprop_qwen3vl.py  eval_hico_action_referring_sft_qwen3vl.py  eval_hico_ground_batch.py  eval_hico_ground_claude.py  eval_hico_ground_gemini.py  eval_hico_ground_openai.py  eval_hico_ground_qwen3vl.py  eval_hico_ground_sft_noprop_qwen3vl.py  eval_hico_ground_sft_qwen3vl.py  eval_llm_judge_opensource.py  eval_swig_action_referring_batch.py  eval_swig_action_referring_claude.py  eval_swig_action_referring_gemini.py  eval_swig_action_referring_openai.py  eval_swig_action_referring_qwen3vl.py  eval_swig_action_referring_sft_noprop_qwen3vl.py  eval_swig_action_referring_sft_qwen3vl.py  eval_swig_ground_batch.py  eval_swig_ground_claude.py  eval_swig_ground_gemini.py  eval_swig_ground_openai.py  eval_swig_ground_qwen3vl.py  eval_swig_ground_sft_noprop_qwen3vl.py  eval_swig_ground_sft_qwen3vl.py  generate_test_proposals.sh  main.py  pyproject.toml  (+29 more)
docs/superpowers/specs/: 2026-03-18-zero-proposal-sft-ablation-design.md
